# distributed-query-executor

./: CMakeLists.txt  README.md  conanfile.txt
libs/include/arrow/: type.h
libs/include/arrow/util/: config.h
libs/lib/: libarrow_acero.so.1800  libarrow_dataset.so.1800  libarrow_flight.so.1800  libarrow_flight_sql.so.1800  libarrow_flight_testing.so.1800  libarrow_testing.so.1800
libs/lib/cmake/Arrow/: ArrowConfig.cmake  ArrowOptions.cmake  ArrowTargets-debug.cmake  ArrowTargets.cmake
libs/lib/cmake/ArrowAcero/: ArrowAceroTargets-debug.cmake
libs/lib/cmake/ArrowDataset/: ArrowDatasetTargets-debug.cmake  ArrowDatasetTargets.cmake
libs/lib/cmake/ArrowFlight/: ArrowFlightConfig.cmake  ArrowFlightTargets-debug.cmake  ArrowFlightTargets.cmake
libs/lib/cmake/ArrowFlightSql/: ArrowFlightSqlTargets-debug.cmake  ArrowFlightSqlTargets.cmake
libs/lib/cmake/ArrowFlightTesting/: ArrowFlightTestingConfig.cmake  ArrowFlightTestingTargets-debug.cmake  ArrowFlightTestingTargets.cmake
libs/lib/cmake/ArrowTesting/: ArrowTestingConfig.cmake  ArrowTestingTargets-debug.cmake  ArrowTestingTargets.cmake
libs/lib/pkgconfig/: arrow-acero.pc  arrow-compute.pc  arrow-csv.pc  arrow-dataset.pc  arrow-filesystem.pc  arrow-flight-sql.pc  arrow-flight-testing.pc  arrow-flight.pc  arrow-json.pc  arrow-testing.pc  arrow.pc
libs/share/gdb/auto-load/home/madoxann/dip/distributed-query-executor/libs/lib/: libarrow.so.1800.0.0-gdb.py
src/: client-main.cpp  server-main.cpp
src/bridge/: flight_sql_server.cpp  flight_sql_server.h  statement.cpp  statement.h  statement_batch_reader.cpp  statement_batch_reader.h
src/client/: client.cpp  client.h
src/router/: flight_sql_router.cpp  flight_sql_router.h  router.cpp  router.h
src/server/: server.cpp  server.h
test/: proxy-test.cpp  query-test.cpp  test_ultis.h
